# algo-library-hw-1

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
assets/: CONTRIBUTION.md  REQUIREMENTS.md
benchmarking/execution_scenarios/: darwin-24.3.0_macos-15.3.1.txt  linux-6.12.5_ubuntu-24.04.txt
benchmarking/memcheck_results/AVLTree/: massif.AVLTree-all.txt  ms_print.AVLTree-all.txt
benchmarking/memcheck_results/RBTree/: massif.RBTree-all.txt  ms_print.RBTree-all.txt
benchmarking/memcheck_results/SplayTree/: massif.SplayTree-all.txt  ms_print.SplayTree-all.txt
benchmarking/memcheck_results/TreapTree/: massif.TreapTree-all.txt  ms_print.TreapTree-all.txt
ci/: Makefile
configs/: benchmarking.yaml
docs/: BENCHMARKS.md  BUILD.md  CONTRIBUTING.md  REQUIREMENTS.md
playground/: CMakeLists.txt  main.cpp
playground/components/ExecutionTimer/: ExecutionTimer.h
playground/components/Report/: Report.cpp
playground/scenarios/: Random.cpp  Scenario.cpp
playground/scenarios/Random/: Random.cpp  Random.h
playground/scenarios/Scenario/: Scenario.h
playground/scenarios/Sorted/: Sorted.cpp  Sorted.h
scripts/: benchmarking.py
src/: CMakeLists.txt
src/impl/: BSTree.cpp  tree_algorithms.cpp
src/modules/: BSTree.cpp  BSTree.ixx  tree_algorithms.cpp  tree_algorithms.ixx
src/modules/nodes/: AVLTreeNode.cpp  RBTreeNode.cpp  SplayTreeNode.cpp  TreapTreeNode.cpp  TreeNode.cpp
src/modules/trees/: AVLTree.cpp  BSTree.cpp  RBTree.cpp  SplayTree.cpp  TreapTree.cpp
tests/: CMakeLists.txt  ParameterizedTreeTests.h  benchmark_tree_algorithms.cpp  test_tree_algorithms.cpp
tests/components/: ParameterizedTreeTests.h  TreeTester.h
tests/components/ExecutionTimer/: ExecutionTimer.cpp
tests/components/Report/: Report.h
tests/components/SimpleAllocator/: SimpleAllocator.h
